added object and transform classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,11 @@ add_executable(MangoRendering main.cpp
         Texture.cpp
         Texture.h
         UniformBuffer.cpp
-        UniformBuffer.h)
+        UniformBuffer.h
+        Object.cpp
+        Object.h
+        Transform.cpp
+        Transform.h)
 
 target_link_libraries(MangoRendering SDL2::SDL2 SDL2::SDL2main glad_gl imgui ${CMAKE_DL_LIBS})
 target_include_directories(MangoRendering PRIVATE include ${glm_SOURCE_DIR} ${stb_SOURCE_DIR})
